# wine-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
Reference Markdowns/: Design Agent.md  Development Plan.md  Git Commands.md  Prompts.md  Scoring Template.md  Sourcing Plan.md  Tier Refactor Development Plan.md  Tier Refactor Phase Prompts.md
config/: sources.yaml
tests/: __init__.py  test_ai_conversion.py  test_analytics.py  test_calibration.py  test_catalog_routes.py  test_catalog_service.py  test_db.py  test_db_canonical.py  test_export.py  test_ingestion_adapters.py  test_ingestion_crawler.py  test_ingestion_normalizer.py  test_ingestion_pipeline.py  test_ingestion_registry.py  test_ingestion_resolver.py  test_ingestion_storage.py  test_meilisearch_service.py  test_notes.py  test_schema.py  test_schema_canonical.py  test_scoring.py  test_search.py  test_web.py
wine_agent/: __init__.py
wine_agent/cli/: __init__.py  ingest.py  main.py
wine_agent/core/: __init__.py  entitlements.py  enums.py  schema.py  schema_canonical.py  scoring.py
wine_agent/db/: __init__.py  engine.py  models.py  models_canonical.py  repositories.py  repositories_canonical.py  search.py
wine_agent/db/migrations/: env.py
wine_agent/ingestion/: __init__.py  crawler.py  jobs.py  normalizer.py  registry.py  resolver.py  storage.py
wine_agent/ingestion/adapters/: __init__.py  base.py  test_adapter.py
wine_agent/services/: __init__.py  analytics_service.py  calibration_service.py  catalog_service.py  export_service.py  meilisearch_service.py  publishing_service.py
wine_agent/services/ai/: __init__.py  client.py  conversion.py  prompts.py
wine_agent/web/: __init__.py  app.py  dependencies.py  templates_config.py
wine_agent/web/routes/: export.py  (+9 more)
(+34 files in other folders)
